<?xml version="1.0" encoding="utf-8"?>
<com.ybg.yxym.im.view.SendFileView android:id="@+id/send_file_view"
                                   xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:layout_width="match_parent"
                                   android:layout_height="match_parent"
                                   android:background="#ffffff"
                                   android:orientation="vertical">

    <LinearLayout
        android:id="@+id/action_bar_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_file_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/document"
                android:textColor="@color/send_file_action_bar"/>

            <ImageView
                android:id="@+id/slipping_1"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_video_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/jmui_video"
                android:textColor="@color/send_file_action_bar"/>

            <ImageView
                android:id="@+id/slipping_2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_album_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/album"
                android:textColor="@color/send_file_action_bar"/>

            <ImageView
                android:id="@+id/slipping_3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_audio_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/audio"
                android:textColor="@color/send_file_action_bar"/>

            <ImageView
                android:id="@+id/slipping_4"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_other_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/other"
                android:textColor="@color/send_file_action_bar"/>

            <ImageView
                android:id="@+id/slipping_5"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

    <com.ybg.yxym.im.view.ScrollControlViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_file_rl"
        android:layout_below="@+id/action_bar_ll">

    </com.ybg.yxym.im.view.ScrollControlViewPager>

    <RelativeLayout
        android:id="@+id/send_file_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#444444">

        <TextView
            android:id="@+id/size_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/send_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/send_file_btn_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/jmui_send"
            android:textColor="#d4d4d4"
            android:textSize="16sp"/>

    </RelativeLayout>

</com.ybg.yxym.im.view.SendFileView>